--- a/app/views/static_pages/refer.html.erb
+++ b/app/views/static_pages/refer.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Redeem') %>
 <div class='my-balance'>
-	<p class="redeemHeading" >When you invite a friend and they sign up through your personalized link, you earn <span class='credits'> 50 </span> credits!</p>
-	<div class="redeemCredits">
-    <p class="redeemCredits__title">Copy and share your link:</p>
+	<p class="refer-heading" >When you invite a friend and they sign up through your personalized link, you earn <span class='credits'> 50 </span> credits!</p>
+	<div class="refer-friend">
+    <p class="redeemCredits__title">Copy &amp; Share:</p>
     <p class="redeemCredits__link"><%= request.host_with_port %>/invite/<%=@referal_code %></p>
   </div>
 </div>
