--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -9,7 +9,7 @@ $purple: #6f5499;
 $black: #000;
 $credits-red: #D9232B;
 $white: #fff;
-$red: #c0392b;
+$red: #e74c3c;
 $orange: #F2BB7C;
 $silver: #bdc3c7;
 $clouds: #ecf0f1;
@@ -206,30 +206,46 @@ textarea {
   display:block;
 }
 .cash-out{
+  margin-top: 10px;
+  background-color: $white;
+  padding: 10px;
+  font-weight: 200;
   ul{
     padding:0px;
     margin:0px;
     list-style-type:none;
   }
   li{
-    padding:30px;
-    padding-bottom:45px;
+    padding: 10px 10px;
     font-color:$dark-font;
-    font-size:50px;
+    font-size: 14px;
     position:relative;
-    border-bottom: 1px solid $dark-font;
-    .cost{
-      position:absolute;
-      right:15px;
-      color:$credits-red;
-      .credit-label{
-        font-size:16px;
-        width: 100px;
-        left: 35px;
-        position: relative;
-      }
+    border-bottom: 1px solid $clouds;
+    &:last-child {
+      border-bottom: none;
+    }
+    .fa-angle-right {
+      float: right;
+      position: relative;
+      bottom: 25px;
+      right: 5px;
+      color: $silver;
     }
   }
+}
+.cash-out__title {
+  font-size: 16px;
+  border-bottom: 1px solid $orange;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+  text-align: left;
+  font-weight: 200;
+  letter-spacing: 0.25px;
+}
+.cash-out__cost {
+  display: block;
+  color: $red;
+  font-size: 12px;
 }
 .edit-user{
   width:95%;
@@ -331,11 +347,43 @@ textarea {
     margin-bottom: 10px;
   }
 }
-.redeemHeading,
-.redeemCredits {
-  padding: 15px;
+.redeem {
+  padding: 10px 15px 5px;
   background-color: $white;
-  font-size:12px;
+}
+.redeem__dollars {
+  border: 1px solid $black;
+  border-radius: 100%;
+  padding: 8px 11px;
+  font-size: 18px;
+  float: left;
+  position: relative;
+  top: 7.5px;
+}
+.redeem__copy {
+  display: inline-block;
+  margin-left: 10px;
+}
+.redeemCredits {
+  font-size: 18px;
+  margin-bottom: 0;
+  font-weight: 200;
+  letter-spacing: 0.25px;
+}
+.refer-friend {
+  background-color: $white;
+  padding: 10px 10px 20px;
+}
+.refer-heading {
+  background-color: $white;
+  padding: 10px;
+  font-size: 12px;
+}
+.redeemCredits__desc {
+  margin: -5px 0 0;
+  font-size: 12px;
+  font-weight: 200;
+  letter-spacing: 0.25;
 }
 .redeemCredits__title {
   border-bottom: 1px solid $orange;
@@ -348,6 +396,7 @@ textarea {
   padding: 30px;
   color: $dark-blue;
   margin-bottom: 0;
+  font-size: 14px;
 }
 .my-balance{
 
@@ -367,7 +416,7 @@ textarea {
     color:$credits-red;
   }
   .text-holder{
-    display:inline-block;
+    display:block;
   }
   .p{
     font-size:16px;
@@ -403,7 +452,6 @@ p {
 }
 
 .mobile-header{
-
   position:relative;
   top:-10px;
   width:100%;
@@ -437,7 +485,7 @@ p {
       font-weight: 200;
       letter-spacing: 0.25px;
       position:relative;
-      top:-10px;
+      top:-15px;
     }
   }
   a{
@@ -687,14 +735,17 @@ p {
   margin: 0 10px;
 }
 .side-nav__signout-link {
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0.5px;
   color: $black;
+  margin-left: 10px;
   &:hover {
     text-decoration: none;
   }
 }
 .side-nav__username {
+  font-size: 16px;
+  margin: 20px 0 0;
   text-transform: capitalize;
 }
 .side-nav__user-info {
@@ -716,6 +767,7 @@ p {
 }
 .lifetime-credits {
   margin-bottom: 0;
+  font-size: 12px;
 }
 /* overlay layer */
 .ssm-overlay {
