--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -1,19 +1,30 @@
 <% provide(:title, 'Redeem') %>
 <div class='my-balance'>
-	<div class='icon-holder'>
-		<%= embedded_svg('svgs/icons/payment7.svg', :class => 'payment-icon') %>
-	</div>
-	<div class='text-holder'>
-		<p class="redeemCredits">My balance: <span class='credits'>
-		<%= current_user.credits.blank? ? "0" : current_user.credits %></span></p>
-		<p class="redeemHeading" >Redeem your credits for cash</p>
+	<div class='redeem'>
+		<i class="fa fa-usd redeem__dollars"></i>
+		<div class="redeem__copy">
+			<p class="redeemCredits">My balance: <span class='credits'>
+			<%= current_user.credits.blank? ? "0" : current_user.credits %></span>
+			<p class="redeemCredits__desc">Redeem your credits for cash</p>
+		</div>
+	</p>
 
 	</div>
 </div>
 <div class='cash-out'>
+	<h1 class="cash-out__title">Rewards</h1>
 	<ul>
-		<li>$5 <span class='cost'>1000<br /><span class='credit-label'>credits</span></span></li>
-		<li>$10 <span class='cost'>1900<br /><span class='credit-label'>credits</span></span></span></li>
-		<li>$20 <span class='cost'>2800<br /><span class='credit-label'>credits</span></span></span></li>
+		<li>$5
+			<span class='cash-out__cost'>-1000 credits</span>
+			<i class="fa fa-angle-right"></i>
+		</li>
+		<li>$10
+			<span class='cash-out__cost'>-1900 credits</span>
+			<i class="fa fa-angle-right"></i>
+		</li>
+		<li>$20
+			<span class='cash-out__cost'>-2800 credits</span>
+			<i class="fa fa-angle-right"></i>
+		</li>
 	</ul>
 </div>
