--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -63,7 +63,7 @@ body {
     .overlay__title {
       color: #fff;
       // font-weight: 200;
-      letter-spacing: 1px;
+      // letter-spacing: 1px;
       display: inline-block;
       border-bottom: 1px solid;
       padding-bottom: 30px;
@@ -92,7 +92,7 @@ body {
       right: 20px;
       top: 10px;
       // font-weight: 200;
-      letter-spacing: 1px;
+      // letter-spacing: 1px;
       text-decoration: underline;
     }
   }
@@ -237,10 +237,9 @@ textarea {
   font-size: 16px;
   border-bottom: 1px solid $orange;
   margin-bottom: 0;
-  padding-bottom: 10px;
   text-align: left;
   // font-weight: 200;
-  letter-spacing: 0.25px;
+  // letter-spacing: 0.25px;
 }
 .cash-out__cost {
   display: block;
@@ -368,7 +367,7 @@ textarea {
   font-size: 18px;
   margin-bottom: 0;
   // font-weight: 200;
-  letter-spacing: 0.25px;
+  // letter-spacing: 0.25px;
 }
 .refer-friend {
   background-color: $white;
@@ -383,7 +382,7 @@ textarea {
   margin: -5px 0 0;
   font-size: 12px;
   // font-weight: 200;
-  letter-spacing: 0.25;
+  // letter-spacing: 0.25;
 }
 .redeemCredits__title {
   border-bottom: 1px solid $orange;
@@ -431,7 +430,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 3em;
-  letter-spacing: -2px;
+  // letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
   color:#4A4A4A;
@@ -439,7 +438,7 @@ h1 {
 
 h2 {
   font-size: 1.2em;
-  letter-spacing: -1px;
+  // letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
@@ -483,7 +482,7 @@ p {
       color:$credits-red;
       font-size: 14px;
       // font-weight: 200;
-      letter-spacing: 0.25px;
+      // letter-spacing: 0.25px;
       position:relative;
       top:-15px;
     }
@@ -716,7 +715,7 @@ p {
     font-size: 14px;
      margin-left: 15px;
      // font-weight: 200;
-     letter-spacing: 0.5px;
+     // letter-spacing: 0.5px;
      &:hover {
       text-decoration: none;
      }
@@ -736,7 +735,7 @@ p {
 }
 .side-nav__signout-link {
   font-size: 14px;
-  letter-spacing: 0.5px;
+  // letter-spacing: 0.5px;
   color: $black;
   margin-left: 10px;
   &:hover {
@@ -755,13 +754,13 @@ p {
   h2 {
     color: $white;
     // font-weight: 200;
-    letter-spacing: 0.5px;
+    // letter-spacing: 0.5px;
   }
 }
 .side-nav__close {
   text-transform: uppercase;
   font-size: 11px;
-  letter-spacing: 0.5px;
+  // letter-spacing: 0.5px;
   margin-top: 0;
   color: $black !important;
 }
