--- a/app/views/games/_flappy_pilot_m.html.erb
+++ b/app/views/games/_flappy_pilot_m.html.erb
@@ -21,6 +21,8 @@
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
+			console.log('rotated');
+			window.scrollTo(0,0);
 		});
 		
 		// Start the Construct 2 project running on window load.
