--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <% if signed_in? %>
-                <div class='mobile-header' <% if @game && @game.id == Game.where(name:'Traffic').first.id %> style='display:none;'<% end %>>
+                <div class='mobile-header' <% if @game && Game.where(name:['Traffic','Flappy Pilot']).pluck(:id).include?(@game.id) %> style='display:none;'<% end %>>
                     <% if @game %>
                     <%= link_to games_path do %>
                     <i class="fa fa-chevron-left back-button"></i>
