--- a/app/views/games/_flappy_pilot_m.html.erb
+++ b/app/views/games/_flappy_pilot_m.html.erb
@@ -23,6 +23,8 @@
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
 			console.log('rotated');
 			window.scrollTo(0,0);
+			window.scrollTo(0,0);
+			window.scrollTo(0,0);
 		});
 		
 		// Start the Construct 2 project running on window load.
