--- a/app/views/user_notifier/send_welcome_email.text.erb
+++ b/app/views/user_notifier/send_welcome_email.text.erb
@@ -1,9 +1,7 @@
-Welcome to the Luckee beta! 
-
-We will be adding new games and features as time goes on.  Please feel free to email me anytime with feedback and suggestions! 
+Hi there, I see you just signed up for the Luckee beta, welcome!  We will be adding new games and features in the coming days, and we could really use your feedback.  Please let me know what you like about the site, as well as anything you would like to see added and improved upon. Feel free to email me anytime with feedback and suggestions!
 
 Have fun, and thank you for your support!
 
-Griff Hall,
+-Griff,
 
-CEO of Luckee 
+Founder and CEO of Luckee
