--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -174,6 +174,8 @@ textarea {
       border: none;
       border-radius: 50px;
       color: #fff;
+      display: block;
+      margin: 20px auto;
       &:hover {
           background-color: #c8ade0;
         }
