refactored specificity of sass rules and added return to dashboard on rotate screen dialog

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -101,6 +101,7 @@
         <div class='mobile-container <% if !signed_in? %>with-money<% end %>' style="width:100%;">
             <div class="mobile--overlay">
                 <a href="/" class="overlay__opt-out">Preview in Browser</a>
+                <a href="/" class="overlay__back-to-dash">Return to Dashboard</a>
                 <div class="overlay__content">
                     <img class="overlay__logo" src="/assets/logo-144.png">
                     <h1 class="overlay__title">Luckee</h1>
