--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -12,7 +12,7 @@
 	</div>
 </div>
 <div class='cash-out'>
-	<p class="cash-out__title">Rewards</p>
+	<p class="page-title">Rewards</p>
 	<ul>
 		<li>$5
 			<span class='cash-out__cost'>-1000 credits</span>
