--- a/app/views/users/edit_mobile.html.erb
+++ b/app/views/users/edit_mobile.html.erb
@@ -1,40 +1,45 @@
 <% provide(:title, "Edit user") %>
-<h1>Update your information</h1>
-
 <div class="edit-user">
+  <p class="page-title page-title--account">Update Account</p>
+
   <%= form_for(@user) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
 
-    <%= f.label :name, "Username" %>
-    <%= f.text_field :name %>
+    <div class="edit-user__container">
+    <%= f.text_field :name, placeholder: "name" %>
 
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, placeholder: "email" %>
 
-    <%= f.label :zipcode %>
-    <%= f.text_field :zipcode, :maxlength => 5 %>
+    <%= f.text_field :zipcode, :maxlength => 5, placeholder: "zip" %>
 
-    <%= f.label "Date of birth" %>
-    <%= f.date_select :dob,:start_year => 1930,:end_year => Time.now.year, :order => [:month, :day, :year] %>
-
-    <div style='clear:both;'></div>
-    <div class="genderButtonLeft">
-      <%= f.radio_button :gender, '1' %>
-      <%= label :gender_male, 'male' %>
-    </div>
-    <div class="genderButtonRight">
-      <%= f.radio_button :gender, '2' %>
-      <%= label :gender_female, 'female' %>
+    <div class="edit-user__partition">
+      <%= f.label "Date of birth" %>
+      <%= f.date_select :dob,:start_year => 1930,:end_year => Time.now.year, :order => [:month, :day, :year] %>
     </div>
 
-    <div style='clear:both;'></div>
+    <div class="edit-user__partition">
+      <div style='clear:both;'></div>
+      <div class="genderButtonLeft edit-user__gender">
+        <%= f.radio_button :gender, '1' %>
+        <%= label :gender_male, 'male' %>
+      </div>
+      <div class="genderButtonRight edit-user__gender">
+        <%= f.radio_button :gender, '2' %>
+        <%= label :gender_female, 'female' %>
+      </div>
+    </div> <!--/.edit-user__partition -->
+    </div> <!--/.edit-user__container -->
 
-    <%= f.label :password %>
-    <%= f.password_field :password %>
 
-    <%= f.label :password_confirmation, "Confirm Password" %>
-    <%= f.password_field :password_confirmation %>
+    <p class="page-title page-title--password">Change Password</p>
+    <div class="edit-user__container">
+      <div style='clear:both;'></div>
+      <%= f.password_field :password, placeholder: "password" %>
 
-    <%= f.submit "Save changes", class: "btn btn-outlined btn-white btn-lg btn-Create" %>
+      <%= f.password_field :password_confirmation, placeholder: "confirm password" %>
+    </div> <!--/.edit-user__container -->
+
+    <%= f.submit "save changes", class: "btn-submit" %>
+
   <% end %>
-</div>
+</div> <!--/.edit-user -->
