adding cash out functionality

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -167,6 +167,9 @@ textarea {
 .home-page__signin {
   margin-top: 20px;
 }
+.paypal-select,.venmo-select,.final-step{
+  display:none;
+}
 .sign-in{
   font-weight: normal;
   text-align: center;
