--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -12,19 +12,25 @@
 	</div>
 </div>
 <div class='cash-out'>
-	<p class="cash-out__title">Rewards</p>
+	<p class="cash-out__title">Rewarsds</p>
 	<ul>
-		<li>$5
-			<span class='cash-out__cost'>-1000 credits</span>
-			<i class="fa fa-angle-right"></i>
-		</li>
-		<li>$10
-			<span class='cash-out__cost'>-1950 credits</span>
-			<i class="fa fa-angle-right"></i>
-		</li>
-		<li>$20
-			<span class='cash-out__cost'>-3900 credits</span>
-			<i class="fa fa-angle-right"></i>
-		</li>
+		<%= link_to redeem_credits_path(credits: 1000) do %>
+			<li>$5
+				<span class='cash-out__cost'>-1000 credits</span>
+				<i class="fa fa-angle-right"></i>
+			</li>
+		<% end %>
+		<%= link_to redeem_credits_path(credits: 1950) do %>
+			<li>$10
+				<span class='cash-out__cost'>-1950 credits</span>
+				<i class="fa fa-angle-right"></i>
+			</li>
+		<% end %>
+		<%= link_to redeem_credits_path(credits: 3900) do %>
+			<li>$20
+				<span class='cash-out__cost'>-3900 credits</span>
+				<i class="fa fa-angle-right"></i>
+			</li>
+		<% end %>
 	</ul>
 </div>
