fixed list styling on redeem page - need to refactor unordered lists to share a common class for general styling

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -256,15 +256,20 @@ textarea {
     margin:0px;
     list-style-type:none;
   }
+  a:hover {
+    text-decoration: none;
+  }
+  a:last-of-type {
+    li {
+      border: none;
+    }
+  }
   li{
     padding: 10px 10px;
     font-color:$dark-font;
     font-size: 14px;
     position:relative;
     border-bottom: 1px solid $clouds;
-    &:last-child {
-      border-bottom: none;
-    }
     .fa-angle-right {
       float: right;
       position: relative;
