--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -87,7 +87,8 @@ body {
   }
   .overlay__content {
     display: block;
-    @include vertical-align();
+    // @include vertical-align();
+    padding: 20% 0 25%;
     font-size: 16px;
     &.hide {
       display: none;
