--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -11,6 +11,12 @@
         <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
         <!-- touchSwipe library -->
 
+        <!-- Icon Images -->
+        <link rel="apple-touch-icon" href="/assets/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/assets/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-touch-icon-152x152.png">
+
         <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
         <script src="http://labs.rampinteractive.co.uk/touchSwipe/jquery.touchSwipe.min.js"></script>
 
