--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -11,11 +11,22 @@
         <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
         <!-- touchSwipe library -->
 
-        <!-- Icon Images -->
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="/assets/favicon-16x16.png">
+
+        <!-- iOS Icon Images -->
         <link rel="apple-touch-icon" href="/assets/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="120x120" href="/assets/apple-touch-icon-120x120.png">
         <link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-touch-icon-152x152.png">
+
+        <!-- Android Icon Image -->
+        <link rel="icon" sizes="192x192" href="/assets/android-chrome-192x192.png">
+        <link rel="icon" sizes="144x144" href="/assets/android-chrome-144x144.png">
+        <link rel="icon" sizes="96x96" href="/assets/android-chrome-96x96.png">
+        <link rel="icon" sizes="72x72" href="/assets/android-chrome-72x72.png">
+        <link rel="icon" sizes="48x48" href="/assets/android-chrome-48x48.png">
+        <link rel="icon" sizes="36x36" href="/assets/android-chrome-36x36.png">
 
         <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
         <script src="http://labs.rampinteractive.co.uk/touchSwipe/jquery.touchSwipe.min.js"></script>
