--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -11,6 +11,9 @@
         <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
         <!-- touchSwipe library -->
 
+        <!-- iOS Load Screen -->
+        <link rel="apple-touch-startup-image" href="/assets/luckee_loading_6.jpg">
+
         <!-- Favicon -->
         <link rel="shortcut icon" href="/assets/favicon-16x16.png">
 
