--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -861,7 +861,7 @@ p {
 
 
 // Overlays
-// @media (max-width: 700px) {
+@media (max-width: 700px) {
   .overlay-screen--rotate {
     .mobile--overlay {
       background-image: url(/assets/rotate_screen_2.jpg)
@@ -956,7 +956,7 @@ p {
       text-decoration: underline;
     }
   }
-// }
+}
 
 .add-to-home {
   .mobile--overlay {
