fixed position of arrow

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -945,7 +945,7 @@ p {
     .overlay__down-arrow {
       font-size: 2em;
       position: absolute;
-      bottom: 30px;
+      bottom: 20%;
       margin-left: -7px;
       left: 50%;
     }
