--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -144,9 +144,9 @@
             </div>
             <% if signed_in? %>
                 <div class='mobile-header' <% if @game && Game.where(name:['Traffic','Flappy Pilot']).pluck(:id).include?(@game.id) %> style='display:none;'<% end %>>
-                    <% if @game %>
-                    <%= link_to games_path do %>
-                    <i class="fa fa-chevron-left back-button"></i>
+                    <% if @show_back_button %>
+                        <%= link_to games_path do %>
+                        <i class="fa fa-chevron-left back-button"></i>
                     <% end %>
                     <% else %>
                          <div class="ssm-open-nav" title="open nav" >
