--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -154,7 +154,7 @@
                         </div>
                     <% end %>
                     <% if @game %>
-                        <h2><%= @game.name %><br /><span class='credits' <% if @game.name == 'Sorcerer Game' %>style='top:0px'<% end %>><%= current_user.credits ||= 0 %> credits</span></h2>
+                        <h2 style='font-size:27px;'><%= @game.name %><br /><span class='credits' <% if @game.name == 'Sorcerer Game' %>style='top:0px'<% end %>><%= current_user.credits ||= 0 %> credits</span></h2>
                     <% else %>
                         <h2><%= link_to games_path do %>Luckee<% end %><br /><span class='credits'><%= current_user.credits ||= 0 %> credits</span></h2>
                     <% end %>
