--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -12,7 +12,7 @@
         <!-- touchSwipe library -->
 
         <!-- iOS Load Screen -->
-        <link rel="apple-touch-startup-image" href="/assets/luckee_loading_6.jpg">
+        <link rel="apple-touch-startup-image" href="/assets/luckee_loading_6.png">
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="/assets/favicon-16x16.png">
