--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -1,18 +1,33 @@
 <% provide(:title, 'Redeem') %>
 <div class='mobile-form'>
-  <h2 style='color:#000;'> How much would you like to cash out? </h2>
-  <h3>Your balance: <%= current_user.credits %> </h3>
+  <div class='my-balance'>
+    <div class="redeem">
+      <i class="fa fa-usd redeem__dollars"></i>
+      <div class="redeem__copy">
+        <p class="redeemCredits">My balance: <span class='credits'>
+        <%= current_user.credits.blank? ? "0" : current_user.credits %></span>
+        <p class="redeemCredits__desc">How much would you like to cash out? </p>
+      </div>
+    </div>
+  </div>
   <%= form_for(@cash_out, url:{:controller=>'static_pages', :action=>'new_cash_out'}) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
   	<%= f.hidden_field :user_id, :value => current_user.id %>
-    <%= f.hidden_field :credits, :value => @amount %>	
-    <%= f.hidden_field :cashout_type %>	 
-    <div class="paypal-choice">
-    		Choose paypal
+    <%= f.hidden_field :credits, :value => @amount %>
+    <%= f.hidden_field :cashout_type %>
+    <div class="cash-out">
+      <p class="page-title">Cash Type</p>
+      <ul>
+        <li class="paypal-choice">
+        		<img src="/assets/paypal.png">
+            <i class="fa fa-angle-right cash-choice"></i>
+        </li>
+        <li class="venmo-choice">
+        		<img src="/assets/venmo.png">
+            <i class="fa fa-angle-right cash-choice"></i>
+        </li>
+      </ul>
     </div>
-    <div class="venmo-choice">
-    		Choose venmo
-    </div>    
     <div class='paypal-select'>
     	<div class='back-choice'>back</div>
 		<label for='cash_out_paypal' >Paypal Details </label>
@@ -20,16 +35,16 @@
 		<%= text_field_tag "first_name", "First Name", :value => current_user.firstname %>
 		<label for='last_name' >Last Name: </label>
 		<%= text_field_tag "last_name","Last Name", :value => current_user.lastname %>
-		<label for='email' >Email: </label>		
+		<label for='email' >Email: </label>
 		<%= text_field_tag "email","email", :value => current_user.email %>
 	</div>
     <div class='venmo-select'>
-    	<div class='back-choice'>back</div>    	
+    	<div class='back-choice'>back</div>
 	    <label for='cash_out_venmo' >Venmo name </label>
 	    <%= f.text_field "venmo" %>
 	</div>
 	<div class='final-step'>
-	    
+
 	    <%= f.submit "Cash out", class: "btn btn-outlined btn-white btn-lg btn-Create create-email" %>
     </div>
   <% end %>
