adjusted font sizes and image sizes on redeem page

--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -20,10 +20,12 @@
       <ul>
         <li class="paypal-choice">
         		<img src="/assets/paypal.png">
+            <span class='cash-out__cost'>Link Account</span>
             <i class="fa fa-angle-right cash-choice"></i>
         </li>
         <li class="venmo-choice">
         		<img src="/assets/venmo.png">
+            <span class='cash-out__cost'>Link Account</span>
             <i class="fa fa-angle-right cash-choice"></i>
         </li>
       </ul>
